# iai-personal-memory-engine

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/ISSUE_TEMPLATE/: config.yml
deploy/hooks/: iai-mcp-codex-session-capture.sh  iai-mcp-session-capture.sh  iai-mcp-session-recall.sh  iai-mcp-turn-capture.sh  iai-mcp-update-check.sh
scripts/: install-linux.sh  install.sh
src/iai_mcp/: __init__.py  aaak.py  capture.py  cli.py  core.py  daemon.py  iai_cli.py  idle_detector.py  lifecycle_event_log.py  lifecycle_state.py  pipeline.py  profile.py  retrieve.py  schema.py  session.py  sleep_pipeline.py  socket_server.py  types.py  wake_handler.py
src/iai_mcp/_deploy/systemd/: iai-mcp-daemon.service
src/iai_mcp/cli/: __init__.py  _analytics.py  _daemon.py
src/iai_mcp/core/: _serializers.py
src/iai_mcp/daemon/: __init__.py  _watchdog.py
src/iai_mcp/doctor/: _storage_checks.py
src/iai_mcp/hippo/: _db.py
src/iai_mcp/lilli/cycle/sleep_pipeline/: _crisis.py  _essential_variable.py  _live_graph.py
src/iai_mcp/migrate/: __init__.py  _dedupe.py  _timestamps.py
tests/: test_autist_knobs_live.py  test_build_runtime_graph_single_flight.py  test_capture.py  test_capture_hooks_codex.py  test_capture_hooks_install_registers_session_recall.py  test_capture_hooks_install_registers_turn_hook.py  test_capture_turn_deferred.py  test_cli_crypto.py  test_cli_daemon_install_python_path.py  test_cli_ensure_crypto_key_present.py  test_cmd_session_start_daemon_unreachable.py  test_cmd_session_start_empty_store.py  test_cmd_session_start_formats_4_segments.py  test_core_digest_inject.py  test_crypto.py  test_daemon.py  test_daemon_drowsy_drain.py  test_daemon_launchd_reenable.py  test_daemon_tick_flags.py  test_daemon_watchdog_sleep_stale.py  test_doctor_hippo_rows.py  test_drain_cap_5000.py  test_drain_deferred_captures.py  test_drain_skips_live_files.py  test_event_batch.py  test_graph_excludes_tombstoned.py  test_graph_tombstone_hardening.py  test_identity_tier_write_gate.py  test_migrate.py  test_milestone_v2_integration.py  test_pending_row_encryption.py  test_per_turn_latency_budget.py  test_plist_template_lint.py  test_profile_no_dead_knobs.py  test_provenance_async.py  test_pyproject_psutil_declared.py  test_recall_overnight_digest_deterministic.py  test_reembed_pending_crypto.py  test_schema_multilingual.py  test_schema_v2.py  (+6 more)
