[project]
name = "iai-mcp"
version = "1.1.1"
description = "MCP server giving Claude persistent autistic-style memory + learning"
requires-python = ">=3.11,<3.13"
dependencies = [
  "pyarrow>=16.0.0,<20.0",  # kept as direct dep — used by hippo.py Arrow IPC path. Ruled out as a replacement target in an earlier cost-benefit pass: Arrow C++ is already the optimized SIMD columnar engine.
  "numpy>=1.26.0,<2.3.0",
  # networkx evicted from main deps. The σ assembly and the
  # graph-algorithm consumer surface route through the native Rust
  # ``iai_mcp_native.graph`` namespace + the pure-Python rich-club
  # helper. The legacy MemoryGraph storage backend lazy-imports
  # networkx inside ``__init__``; it remains an internal
  # implementation detail and is pinned exactly to ``networkx==3.3``
  # in ``[project.optional-dependencies.dev]`` to double-duty as the
  # σ-baseline oracle and the MemoryGraph test backend.
  "scipy>=1.13.0",      # CSR build glue for the σ assembly helpers.
  "pandas>=2.0,<3.0",   # hippo store DataFrame read/write path (core runtime, not optional).
  "numba>=0.59",        # Numba JIT for custom MIT Leiden kernels. BSD-2 license, MIT-compatible. Ruled out as a replacement target: numba already JITs to LLVM machine code.
  # `python-igraph` and `leidenalg` were REMOVED in full. They cannot be
  # installed via this package (not even as an optional extra). The sole
  # community-detection backend is now MOSAIC (`src/iai_mcp/mosaic.py`,
  # pure-MIT). See the CHANGELOG and the README MOSAIC section.
  # anthropic SDK removed: subscription-billed `claude -p`
  # subprocess replaces api.anthropic.com direct calls. Bench harness uses
  # the tiktoken cl100k proxy for token counting where needed.
  "tiktoken>=0.7.0",    # offline tokeniser fallback for bench/tokens.py + 3 tests
  "cryptography>=42.0.0",  # AES-256-GCM at rest (pyca/cryptography, audited primitive)
  "keyring>=24.0.0",       # OS keychain (macOS / Linux Secret Service / Windows Credential Manager)
  "cachetools>=5.3.0",     # TTLCache for HIPPEA activation-cascade LRU warmer
  "hnswlib>=0.8.0,<1.0",  # ANN cosine index for Hippo backend
  "psutil>=5.9.0",         # self-process CPU sampling for daemon CPU watchdog. Already used 4x in doctor.py via transitive resolution; this declaration makes a clean `pip install -e .` reach psutil without [compress] extra.
  "setproctitle==1.3.7",   # daemon process title (cosmetic, fail-soft)
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.5.0",
  "defusedxml>=0.7",   # safe XML parse used by the launchd-plist lint test
  # networkx is the σ-baseline oracle in tests/fixtures/sigma_baseline.json
  # (the locked SHA-pinned fixture was generated via networkx 3.3); it also
  # backs MemoryGraph's lazy-imported internal storage. Exact pin so the
  # baseline reproducibility check stays stable.
  "networkx==3.3",
  # Differential property-based harness for the σ baseline oracle.
  "hypothesis-networkx>=0.3",
  # sklearn.metrics oracle for the mosaic LFR gauntlet (was previously a
  # transitive dep of the old embedder stack; now declared directly).
  "scikit-learn>=1.3",
]
# One-time migration from legacy LanceDB store to Hippo (SQLite + hnswlib).
# Install with: pip install iai-mcp[migration]
# Then run: python scripts/migrate_lance_to_hippo.py
migration = ["lancedb>=0.11.0,<1.0"]

[project.scripts]
iai-mcp-core = "iai_mcp.core:main"
iai-mcp = "iai_mcp.cli:main"
iai = "iai_mcp.iai_cli:main"

[build-system]
requires = ["setuptools>=68", "setuptools-rust>=1.10"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
iai_mcp = [
    "_deploy/launchd/*.plist",
    "_deploy/systemd/*.service",
    "_deploy/hooks/*.sh",
    "_wrapper/*.js",
]

[[tool.setuptools-rust.ext-modules]]
target = "iai_mcp_native"
path = "rust/iai_mcp_native/Cargo.toml"
binding = "PyO3"
features = ["extension-module"]
args = ["--no-default-features"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
  "slow: opt-in via --runslow (subprocess-heavy bench-shim resolution tests)",
  "perf: opt-in via --perf (wall-clock latency benches, out of the default correctness gate)",
  "live: opt-in via --live (real daemon-subprocess E2E gate, out of the default correctness gate)",
  "literature: algorithm-baseline parity checks",
]
norecursedirs = ["_manual", ".*", "build", "dist", "node_modules", "*.egg"]
